force-app/main/default/objects/Time_Card__c/fields/EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>EmployeeID__c</fullName>
    <label>EmployeeID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>